--- a/Proyecto1/templates/AppEntrega/padre.html
+++ b/Proyecto1/templates/AppEntrega/padre.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Landing Page - Start Bootstrap Theme</title>
+        <title>Clínica Coder</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -22,9 +22,9 @@
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="btn btn-secondary" href= "{% url 'especialidadesformulario' %}" >Especialidades</a>
-                <a class="btn btn-secondary" href="{% url 'medicosformulario' %}" >Médicos</a>
-                <a class="btn btn-secondary" href="{% url 'pacientesformulario' %}" >Pacientes</a>
+                <a class="btn btn-secondary" href= "{% url 'especialidades' %}" >Especialidades</a>
+                <a class="btn btn-secondary" href="{% url 'medicos' %}" >Médicos</a>
+                <a class="btn btn-secondary" href="{% url 'pacientes' %}" >Pacientes</a>
                 <a class="btn btn-secondary" href="{% url 'busquedamedico' %}" >BUSCAR MÉDICO</a>
 
 
@@ -37,7 +37,7 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">CODER CLINIC</h1>
+                            <h1 class="mb-5">CLINICA CODER</h1>
                             <!-- Signup form-->
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
