--- a/Proyecto1/templates/AppEntrega/busquedamedico.html
+++ b/Proyecto1/templates/AppEntrega/busquedamedico.html
@@ -5,26 +5,11 @@
 <h5> Buscá tu médico por apellido: </h5>
 <form action="/AppEntrega/buscar/" method="GET" >
 
-     <input type="text", name="medico" id="medico" >
+     <input type="text", name="apellido" id="apellido" >
      <input type="submit" value= "Buscar">
 
 
 </form>
 
-{% if nombre_medico%}
-<p> Estamos buscando al doctor : {{medico}} </p>
-
-<ul>
-{% for medico in medicos%}
-    <li> {{medico.nombre}} </li>
-    <li> {{medico.apellido}} </li>
-    <li> {{medico.email}} </li>
-{% endfor %}
-</ul>
-
-{% else %}
-<p> No hay médicos con ese apellido. </p>
-
-{% endif %}
 
 {% endblock ContenidoQueCambia %}
